<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_options_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:background="@color/lighter_gray"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_options_tab_specifier_provider_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/box_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_options_tab_specifier_provider_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/specified_provider"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <RadioGroup
                android:id="@+id/fragment_options_tab_specifier_provider_box_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/fragment_options_tab_specifier_provider_box_radio_group_provider_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/network" />

                <RadioButton
                    android:id="@+id/fragment_options_tab_specifier_provider_box_radio_group_provider_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps" />

                <RadioButton
                    android:id="@+id/fragment_options_tab_specifier_provider_box_radio_group_provider_passive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passive" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_options_tab_update_type_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/box_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_options_tab_update_type_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/update_type"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <RadioGroup
                android:id="@+id/fragment_options_tab_update_type_box_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/fragment_options_tab_update_type_box_radio_group_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/single" />

                <RadioButton
                    android:id="@+id/fragment_options_tab_update_type_box_radio_group_periodical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/periodical" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_options_tab_update_options_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/box_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_options_tab_update_options_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/update_options"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fragment_options_tab_update_options_box_minimum_time_between_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/fragment_options_tab_update_options_box_minimum_time_between_updates"
                    android:inputType="number"
                    android:hint="@string/minimum_time_between_updates"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/fragment_options_tab_update_options_box_minimum_distance_between_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:labelFor="@+id/fragment_options_tab_update_options_box_minimum_distance_between_updates"
                    android:hint="@string/minimum_distance_between_updates"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/fragment_options_tab_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/fragment_options_tab_stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>